Fixed issues with #selected-image on small screens.

--- a/css/gallery.less
+++ b/css/gallery.less
@@ -45,73 +45,53 @@
 
     #selected-image-container {
 
-      display: none;
+      display: initial;
+      width: 100%;
+
+      #selected-image {
+
+        padding: 0 0 0 0;
+        margin-bottom: 2%;
+        //max-height: @screen-height * 0.8;
+        max-width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+
+      }
 
     }
 
-    #large-screen-container {
+    #small-screen-container {
 
-      display: none;
-
-    }
-
-    @media(min-width: @screen-sm-min) {
-
-      #selected-image-container {
-
-        display: initial;
-        width: 100%;
-
-        #selected-image {
-
-          padding: 0 0 0 0;
-          margin-bottom: 2%;
-          max-height: @screen-height * 0.8;
-
-        }
-
-      }
-
-      #small-screen-container {
-
-        //display: none;
-
-      }
-
-      #large-screen-container {
-
-        display: initial;
-
-      }
-
-      .selectable-container {
-
-        overflow-y: auto;
-        overflow-x: hidden;
-        //height: @screen-height * 0.8;
-
-      }
-
+      //display: none;
 
     }
 
-    .image-container {
+    .selectable-container {
 
-      display: inline-block;
-      //margin: 0 5px 5px 0;
-      margin: 0 25% 5px 25%;
-      width: 50%;
+      overflow-y: auto;
+      overflow-x: hidden;
+      //height: @screen-height * 0.8;
+
+    }
+
+
+  }
+
+  .image-container {
+
+    display: inline-block;
+    margin: 0 25% 5px 25%;
+    width: 50%;
+    max-width: 100%;
+
+    img {
+
+      display: block;
       max-width: 100%;
-
-      img {
-        display: block;
-        max-width: 100%;
-        min-width: 150px;
-      }
+      min-width: 150px;
 
     }
-
-
   }
 }
 
